--- a/Dockerfile.nginx
+++ b/Dockerfile.nginx
@@ -1,8 +1,12 @@
 # Use the Nginx image from Docker Hub
 FROM nginx:1.19-alpine
 
-# Remove default configuration
 RUN rm /etc/nginx/conf.d/default.conf
 
-# Copy the Nginx configuration file
+RUN apk add --no-cache openssl
+
+RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/ssl/private/selfsigned.key -out /etc/ssl/certs/selfsigned.crt -subj "/C=US/ST=Denial/L=Springfield/O=Dis/CN=www.example.com"
+
+RUN apk del openssl
+
 COPY nginx.conf /etc/nginx/conf.d
