--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,7 @@
 server {
     listen 80;
     server_name localhost;
+    client_max_body_size 2G;
 
     location / {
         proxy_pass http://flask:8000;
@@ -13,7 +14,7 @@ server {
 server {
     listen 443 ssl;
     server_name localhost;
-
+    client_max_body_size 2G;
     ssl_certificate /etc/ssl/certs/selfsigned.crt;
     ssl_certificate_key /etc/ssl/private/selfsigned.key;
 
